--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
     "noPropertyAccessFromIndexSignature": false,
     "isolatedModules": true,
     "verbatimModuleSyntax": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
