--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "event-dispatch": "^0.4.1",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "express-rate-limit": "^7.5.1",
