chore(env): update env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,15 @@
+NODE_ENV=
 PORT=
 MONGODB_URI=
 JWT_SECRET=
-NODE_ENV=
+JWT_ALGO=
+
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=
+
+ME_CONFIG_MONGODB_ADMINUSERNAME=
+ME_CONFIG_MONGODB_ADMINPASSWORD=
+ME_CONFIG_MONGODB_URL=
+ME_CONFIG_BASICAUTH_USERNAME=
+ME_CONFIG_BASICAUTH_PASSWORD=
