--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,25 @@
-NODE_ENV=
-PORT=
-MONGODB_URI=
-JWT_SECRET=
-JWT_ALGO=
+# Environment Configuration
+NODE_ENV=development
+PORT=3000
 
-MONGO_INITDB_ROOT_USERNAME=
-MONGO_INITDB_ROOT_PASSWORD=
-MONGO_INITDB_DATABASE=
+# Overpass API Configuration
+OVERPASS_URL=https://overpass-api.de/api/interpreter
 
-ME_CONFIG_MONGODB_ADMINUSERNAME=
-ME_CONFIG_MONGODB_ADMINPASSWORD=
-ME_CONFIG_MONGODB_URL=
-ME_CONFIG_BASICAUTH_USERNAME=
-ME_CONFIG_BASICAUTH_PASSWORD=
+# MongoDB Configuration
+MONGODB_URI=mongodb://admin:your_password@mongo:27017/your_database?authSource=admin
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here_min_32_characters
+JWT_ALGO=HS256
+
+# MongoDB Docker Container Configuration
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=your_mongo_password
+MONGO_INITDB_DATABASE=your_database_name
+
+# Mongo Express Configuration (MongoDB Web UI)
+ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+ME_CONFIG_MONGODB_ADMINPASSWORD=your_mongo_password
+ME_CONFIG_MONGODB_URL=mongodb://admin:your_mongo_password@mongo:27017/
+ME_CONFIG_BASICAUTH_USERNAME=admin
+ME_CONFIG_BASICAUTH_PASSWORD=your_web_ui_password
